--- a/src/components/Mission.astro
+++ b/src/components/Mission.astro
@@ -5,16 +5,16 @@ import motionSpeed from '../assets/images/motion-speed.jpg';
 <section class="w-full bg-white pt-28 lg:pt-48 relative h-full">
   <div class="relative z-20">
     <div class="relative lg:absolute w-full">
-    <div class="container mx-auto">
-      <div class="grid grid-cols-12 gap-4">
-        <div class="col-span-12 lg:col-span-4 lg:col-end-13 border-t z-10">
-          <div class="py-5 flex justify-between">
-            <span class="uppercase">(Mission)</span>
-            <span class="">02</span>
+      <div class="container mx-auto">
+        <div class="grid grid-cols-12 gap-4">
+          <div class="col-span-12 lg:col-span-4 lg:col-end-13 border-t z-10">
+            <div class="py-5 flex justify-between">
+              <span class="uppercase">(Mission)</span>
+              <span class="">02</span>
+            </div>
           </div>
         </div>
       </div>
-    </div>
     </div>
     <div class="py-48 relative">
       <div class="absolute bg-white w-full h-full top-0 z-0">
@@ -32,5 +32,22 @@ import motionSpeed from '../assets/images/motion-speed.jpg';
         <h3 class="font-display text-white uppercase font-[800] text-center w-full leading-none relative block" style="font-size: 10.7vw;">Just cool</h3>
       </div>
     </div>
+    <div class="relative w-full">
+      <div class="container mx-auto">
+        <div class="grid grid-cols-12 gap-4">
+          <div class="col-span-12 lg:col-span-4 lg:col-end-13 z-10">
+            <div class="py-5 flex flex-col justify-between lg:text-xl mt-24 lg:-mt-16">
+              <p class="indent-14 leading-normal mb-5">
+                My mission? To prove that beautiful and functional can go hand in hand, and that accessible can also be super cool.
+              </p>
+              <p class="indent-14 leading-normal">
+                It’s all about balance: taking an idea and turning it into a fast, intuitive, and stylish digital product. It’s not just about design or code — it’s about making everything work together in harmony, without compromises.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
 </section>
