--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ seo={{
 	<Header textColor="white" headerClasses="opacity-1" backgroundColor="bg-boulder-950" menuColor="#ffffff"/>
 	<main>
 		<Hero/>
-    <About/>
+    <About actionText="More about me" actionLink="/about"/>
     <Mission/>
     <Services size={58} strokeWidth={0.5} customClasses='text-boulder-500' subtitle="03"/>
     <Blog limit="3"/>
