Updated services and mission

--- a/src/components/Mission.astro
+++ b/src/components/Mission.astro
@@ -41,7 +41,7 @@ import motionSpeed from '../assets/images/motion-speed.jpg';
                 My mission? To prove that beautiful and functional can go hand in hand, and that accessible can also be super cool.
               </p>
               <p class="indent-14 leading-normal">
-                It’s all about balance: taking an idea and turning it into a fast, intuitive, and stylish digital product. It’s not just about design or code — it’s about making everything work together in harmony, without compromises.
+                It’s all about balance: taking an idea and turning it into a fast, intuitive, and stylish digital product. It’s not just about design or code — it’s about making everything work together in harmony, with seamless integration.
               </p>
             </div>
           </div>
