Updated services and mission

--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -11,7 +11,7 @@ const { limit = null } = Astro.props;
           <span class="uppercase">(Tech & tips)</span>
           <span class="">04</span>
         </div>
-        <h2 class="text-3xl lg:text-4xl font-display font-bold">Blog</h2>
+        <h2 class="text-3xl lg:text-4xl font-display font-bold mb-16">Blog</h2>
         <LatestPost limit={limit} />
       </div>
     </div>
