--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -26,7 +26,7 @@ import SiteData from "../constants/siteData.json";
 			alt="About me"
 			class="w-100 h-[46vw] object-cover"
 		/>
-		<AboutComponent actionLink="/services" actionText="Services"/>
+		<AboutComponent actionLink="/services" actionText="Discover my services"/>
     <Mission/>
 	</main>
   <Footer />
