--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -44,8 +44,8 @@ const services: ServiceItem[] = [
             const IconComponent = iconMap[item.icon] || null;
             return (
             <div class="py-14 border-b first:border-t transition-colors duration-300 ease-in-out">
-              <div class="grid grid-cols-[1fr_5fr_2fr] grid-rows-[auto_auto_auto] lg:grid-cols-3 lg:grid-row-none xl:grid-cols-[2fr_4fr_4fr_2fr] lg:gap-4">
-                <span class="text-2xl lg:text-3xl font-semibold order-2 lg:order-1 row-span-1 col-span-1 text-boulder-900">{(index + 1).toString().padStart(2,'0')}.</span>
+              <div class="grid grid-cols-[1fr_5fr_2fr] grid-rows-[auto_auto_auto] lg:grid-cols-3 lg:grid-row-none xl:grid-cols-[2fr_4fr_4fr_2fr] lg:gap-4 gap-y-5 lg:gap-y-4">
+                <span class="text-2xl lg:text-3xl font-semibold order-2 lg:order-1 row-span-1 col-span-1 text-boulder-900 leading-tight">{(index + 1).toString().padStart(2,'0')}.</span>
                 <h3 class="text-2xl lg:text-3xl font-semibold lg:col-span-1 xl:col-auto order-2 row-span-1 col-span-1 leading-tight text-boulder-900" set:html={item.title} />
                 <p class="text-lg lg:text-xl text-boulder-400 lg:col-start-2 lg:row-start-2 xl:col-auto xl:row-auto order-3 row-start-3 row-end-4 col-start-1 col-end-4">{ item.body }</p>
                 <div class="flex lg:justify-end text-end order-1 lg:order-4 col-start-1 col-end-4 lg:col-start-auto lg:col-end-auto">
