--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,6 +8,7 @@ import Title from '../components/Title.astro';
 import ParallaxImage from '../components/ParallaxImage.astro';
 import catWithLaptop from '../assets/images/cat-with-laptop.jpg';
 import SiteData from "../constants/siteData.json";
+import Experience from '../components/Experience.astro';
 
 ---
 
@@ -28,6 +29,7 @@ import SiteData from "../constants/siteData.json";
 		/>
 		<AboutComponent actionLink="/services" actionText="Discover my services"/>
     <Mission/>
+		<Experience subtitle="03"/>
 	</main>
   <Footer />
 </Layout>
