--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -11,7 +11,7 @@ const { limit = null } = Astro.props;
           <span class="uppercase">(Blog)</span>
           <span class="">04</span>
         </div>
-        <h2 class="text-3xl lg:text-4xl font-display font-extrabold mb-16">Tech & tips</h2>
+        <h2 class="text-3xl lg:text-4xl font-display font-extrabold mb-16 text-boulder-900">Tech & tips</h2>
         <LatestPost limit={limit} />
       </div>
     </div>
