--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -23,7 +23,7 @@ const technologies = await getCollection("tech");
             {
                 technologies.map((tech) => (
                   <div class="swiper-slide w-full flex flex-col items-center justify-center">
-                    <Image src={tech.data.image} alt={tech.data.name} alt={tech.data.name} class="grayscale hover:grayscale-0 opacity-20 hover:opacity-100 transform"/>
+                    <Image src={tech.data.image} alt={tech.data.name} alt={tech.data.name} class="grayscale hover:grayscale-0 opacity-20 hover:opacity-100 transition-all duration-500 ease-in-out"/>
                   </div>
                 ))
             }
