--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -23,14 +23,14 @@ const technologies = await getCollection("tech");
             {
                 technologies.map((tech) => (
                   <div class="swiper-slide w-full flex flex-col items-center justify-center">
-                    <Image src={tech.data.image} alt={tech.data.name} alt={tech.data.name} class="grayscale hover:grayscale-0 opacity-20 hover:opacity-100 transition-all duration-500 ease-in-out"/>
+                    <Image src={tech.data.image} alt={tech.data.name} alt={tech.data.name} class="cursor-pointer grayscale hover:grayscale-0 opacity-20 hover:opacity-100 transition-all duration-500 ease-in-out"/>
                   </div>
                 ))
             }
             </div>
             <!-- Botones de navegación -->
-            <div class="swiper-button-prev stroke-slate-50"></div>
-            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev !text-boulder-900 after:!text-xl"></div>
+            <div class="swiper-button-next !text-boulder-900 after:!text-xl"></div>
           </div>
         </div>
       </div>
@@ -54,6 +54,14 @@ const technologies = await getCollection("tech");
     navigation: {          // definir botones next y prev para el módulo Navigation
       prevEl: ".swiper-button-prev",
       nextEl: ".swiper-button-next",
-    }
+    },
+    breakpoints: {         // definir breakpoints para slidesPerView
+      320: { slidesPerView: 3 },
+      640: { slidesPerView: 3 },
+      768: { slidesPerView: 4 },
+      1024: { slidesPerView: 5 },
+      1280: { slidesPerView: 6 },
+      1536: { slidesPerView: 7 },
+    },
   });
 </script>
