Added first blog

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -35,6 +35,11 @@ seo={{
       siteName: 'PierGorelli.com',
     },
   },
+  twitter: {
+      title: post.data.title,
+      description: post.data.description,
+      creator: '@PGorelli91424',
+  }
 }}
 >
   <Header textColor="black" headerClasses="bg-white" menuColor="#000000"/>
