Added blog posts

--- a/src/components/TextWithImage.astro
+++ b/src/components/TextWithImage.astro
@@ -6,6 +6,11 @@ const { image } = Astro.props;
     <div class="col-span-12 lg:col-span-6">
       <img src={image} alt="Contact" class="w-full h-auto object-cover"/>
     </div>
-    <div class="col-span-12 lg:col-span-5 lg:col-start-8 flex flex-col justify-end">Hola</div>
+    <div class="col-span-12 lg:col-span-5 lg:col-start-8 flex flex-col justify-end text-xl lg:text-2xl">
+      <p class="indent-14 leading-normal text-boulder-900 text-xl lg:text-2xl"> 
+        I’m always open to exploring new projects, ideas, and collaborations. Whether you have a clear plan or just the seed of an idea, I’d love to hear from you.
+        </p>
+        <a href="mailto:me@piergorelli.com" class="font-bold mt-8 text-2xl lg:text-3xl underline">me@piergorelli.com</a>
+    </div>
   </div>
 </section>
