--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -39,6 +39,7 @@ seo={{
       title: post.data.title,
       description: post.data.description,
       creator: '@PGorelli91424',
+      image: post.data.cover.src,
   }
 }}
 >
