Added blog post Hello World

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -26,7 +26,7 @@ seo={{
 	description: post.data.description,
   openGraph: {
     basic: {
-      image: post.data.cover.toString(),
+      image: post.data.cover.src,
       title: post.data.title,
       type: 'article',
       url: `https://piergorelli.com/blog/${post.slug}`,
