Added Hidden potential by Grant

--- a/src/components/TextWithImage.astro
+++ b/src/components/TextWithImage.astro
@@ -8,7 +8,7 @@ const { image } = Astro.props;
     </div>
     <div class="col-span-12 lg:col-span-5 lg:col-start-8 flex flex-col justify-end text-xl lg:text-2xl">
       <p class="indent-14 leading-normal text-boulder-900 text-xl lg:text-2xl"> 
-        I’m always open to exploring new projects, ideas, and collaborations. Whether you have a clear plan or just the seed of an idea, I’d love to hear from you.
+        I’m a full-stack developer based in Valencia, always eager to tackle new challenges and bring ideas to life. Whether you have a clear plan or just the spark of an idea, I’d love to collaborate with you. Open to working with clients and teams worldwide—let’s build something great together.
         </p>
         <a href="mailto:me@piergorelli.com" class="font-bold mt-8 text-2xl lg:text-3xl underline">me@piergorelli.com</a>
     </div>
