--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -12,7 +12,7 @@ const { subtitle = ""} = Astro.props;
       </div>
       <div class="col-span-12 lg:col-span-4">
         <span class="text-xl lg:text-2xl">
-          If you prefer, use the form on the side to reach out directly. Whether you want to discuss a project, share ideas, or just say hello, I’m here to connect. Let’s create something amazing together.
+          If you prefer, use the form to reach out directly. Whether you want to discuss a project, share ideas, or just say hello, I’m here to connect. Let’s create something amazing together.
         </span>
       </div>
       <div class="col-span-12 lg:col-span-7 lg:col-start-6">
