--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -21,15 +21,8 @@ import Experience from '../components/Experience.astro';
 	>
 	<Header textColor="black" headerClasses="" menuColor="#000000"/>
 	<main>
-		<Title title="About me" />
-		<ParallaxImage
-			src={catWithLaptop.src}
-			alt="About me"
-			class="w-100 h-[46vw] object-cover"
-		/>
-		<AboutComponent actionLink="/services" actionText="Discover my services"/>
-    <Mission/>
-		<Experience subtitle="03"/>
+		<Title title="Privacy policy" border="true" />
+		
 	</main>
   <Footer />
 </Layout>
