--- a/src/components/LatestPost.astro
+++ b/src/components/LatestPost.astro
@@ -10,7 +10,7 @@ const recentPosts = limit ? allBlogPosts
 ---
 
 <section>
-  <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
+  <div class="grid grid-cols-1 lg:grid-cols-3 gap-y-6 gap-4 lg:gap-y-4">
     {
       recentPosts.map((post) => (
        <div>
@@ -18,7 +18,8 @@ const recentPosts = limit ? allBlogPosts
           <div class="relative group aspect-[4/3] overflow-hidden mb-5">
             <Image src={post.data.cover} alt={post.data.alt} class="aspect-[4/3] object-cover mb-5 transform transition-transform duration-500 group-hover:scale-125"/>
           </div>
-          <h3 class="text-xl lg:text-2xl text-boulder-900">{post.data.title}</h3>
+          <h3 class="text-xl lg:text-2xl text-boulder-900 mb-2.5">{post.data.title}</h3>
+          <span class="uppercase text-boulder-500 text-sm">{new Date(post.data.pubDate).toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}</span>
         </a>
         </div>
 
