FIxed slider margins

--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -16,7 +16,7 @@ const technologies = await getCollection("tech");
         </div>
         <h2 class="text-3xl lg:text-4xl font-display font-extrabold mb-4 text-boulder-900 leading-tight">Technologies I work with</h2>
         <p class="text-boulder-900 lg:text-xl">To build fast, reliable, and stylish digital solutions, I leverage a range of cutting-edge technologies, including:</p>
-        <div class="tech-slider mt-16">
+        <div class="tech-slider mt-24 lg:mt-48">
           <div class="swiper">
             <!-- Wrapper adicional requerido -->
             <div class="swiper-wrapper">
