--- a/src/components/LatestPost.astro
+++ b/src/components/LatestPost.astro
@@ -10,7 +10,7 @@ const recentPosts = limit ? allBlogPosts
 ---
 
 <section>
-  <div class="grid grid-cols-1 lg:grid-cols-3 gap-y-6 gap-4 lg:gap-y-4">
+  <div class="grid grid-cols-1 lg:grid-cols-3 gap-y-6 gap-4">
     {
       recentPosts.map((post) => (
        <div>
