Fixed trailing slash

--- a/src/components/FooterMenu.astro
+++ b/src/components/FooterMenu.astro
@@ -4,11 +4,11 @@ import * as AstroFeather from 'astro-feather'
 const pages = [
   {
     name: 'Cookie Policy',
-    url: '/cookie-policy',
+    url: '/cookie-policy/',
   },
   {
     name: 'Privacy Policy',
-    url: '/privacy-policy',
+    url: '/privacy-policy/',
   },
 ];
 ---
