--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,10 +9,10 @@ const { textColor = 'black', headerClasses = '', backgroundColor = 'bg-white', m
 
 
 const pages: MenuItem[] = [
-	{ title: 'About me', href: '/about', body: 'Learn how Astro works and explore the official API docs.' },
-	{ title: 'Services', href: '/services', body: 'Supercharge your project with new frameworks and libraries.' },
-	{ title: 'Blog', href: '/blog', body: 'Explore a galaxy of community-built starter themes.' },
-	{ title: 'Contact', href: '/contact', body: 'Come say hi to our amazing Discord community. ❤️' },
+	{ title: 'About me', href: '/about/', body: 'Learn how Astro works and explore the official API docs.' },
+	{ title: 'Services', href: '/services/', body: 'Supercharge your project with new frameworks and libraries.' },
+	{ title: 'Blog', href: '/blog/', body: 'Explore a galaxy of community-built starter themes.' },
+	{ title: 'Contact', href: '/contact/', body: 'Come say hi to our amazing Discord community. ❤️' },
 ];
 
 ---
