--- a/src/components/LatestPost.astro
+++ b/src/components/LatestPost.astro
@@ -14,7 +14,7 @@ const recentPosts = limit ? allBlogPosts
     {
       recentPosts.map((post) => (
        <div>
-        <a href={"/blog/" + post.slug}>
+        <a href={"/blog/" + post.slug + "/"}>
           <div class="relative group aspect-[4/3] overflow-hidden mb-5">
             <Image src={post.data.cover} alt={post.data.alt} class="aspect-[4/3] object-cover mb-5 transform transition-transform duration-500 group-hover:scale-125"/>
           </div>
