--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -27,7 +27,7 @@ import Experience from '../components/Experience.astro';
 			alt="About me"
 			class="w-100 h-[46vw] object-cover"
 		/>
-		<AboutComponent actionLink="/services" actionText="Discover my services"/>
+		<AboutComponent actionLink="/services/" actionText="Discover my services"/>
     <Mission/>
 		<Experience subtitle="03"/>
 	</main>
